2010-08-14  Matthew Delaney  <mdelaney@apple.com>

Reviewed by Kenneth Rohde Christiansen.

        Canvas is not reset when setting canvas.width
        https://bugs.webkit.org/show_bug.cgi?id=43341

        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::reset): Moved the call to
        hasCreatedImageBuffer up *before* the call to setSurface since setSurface
        sets hasCreatedImageBuffer to false every time.

Canonical link: https://commits.webkit.org/56167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65367 268f45cc-cd09-0410-ab3c-d52691b4dbfc